# miashs-2025-2026-advanced-programming

./: .gitignore  .vsls.json  _quarto-book.yml  _quarto-notebooks.yml  _quarto-slides.yml  _quarto.yml  applications.ejs  applications.qmd  index.qmd  intro.qmd  jupytext.toml  package-lock.json  package.json  pyproject.toml  references.bib  slides.ejs  slides.qmd  styles.scss
Courses/: 01_Code-Assistant.qmd  02_Parallel-intro.qmd  03_Asynchronous.qmd  04_IPC-and-Locking.qmd  05_Distributed.qmd  06_Dask-Ray.qmd  06_SIMD.qmd  07_Dask-delayed.qmd  09_GPU-Caching-etc.qmd  10_WebGPU-First-App.qmd  11_0_Designing-parallel.qmd  11_1_WebGPU-matmul.qmd  11_WebGPU-matmul.qmd
Courses/50yearstrend/: plot.gnuplot
Courses/Solutions/: 01_0_Code-Assistant-prompt-engineering.qmd  01_1_AI-Agent-sol.qmd  01_1_AI-Agent.qmd  02_0_Numpy_Workout.qmd  02_1_Decorators_tutorial-sol.qmd  02_2_Generators_tutorial-sol.qmd  02_3_MultiProcessing_tutorial-sol.qmd  02_4_Scaling.qmd  (+8 more)
docs/: applications.html  index.html  intro.html  listings.json  references.html  search.json  slides.html  summary.html
filters/: make-transparent-img.lua  notebooks-meta.lua  slides-meta.lua  unclutter-slides.lua  unclutter-tp.lua
images/: Transformer-architectures-of-BERT-and-GPT-Illustration-of-the-typical-structure-of-a.ppm  bert-task-MLM.d2
materials/: alice.txt  bert_head_view.html
playground/: 01_0_Code-Assistants.txt  01_1_AI-Agent.py  02_0_Numpy_Workout.py  participation.md
project-scripts/: convert.py  prepare-notebooks.py  prepare-slides.py
various/: read-ical.fsx  regenerate-tikz.fsx
(+142 files in other folders)
