[project]
name = "cours-programmation-miashs-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudpickle>=3.1.1",
    "dask[complete]>=2025.7.0",
    "graphviz>=0.21",
    "ipycytoscape>=1.3.3",
    "ipywidgets>=8.1.7",
    "numba>=0.61.2",
    "plotly>=6.3.0",
    "ray>=2.49.1",
    "scikit-learn>=1.7.1",
]

[tool.uv.workspace]
members = [
    "teacher-playground/mcp",
    "teacher-playground/mcp-time",
]
